fix: add contrast
Give the link color in the admin bar more contrast

--- a/css/dark.css
+++ b/css/dark.css
@@ -9,7 +9,7 @@ html,
   color: #e4e4e4 !important;
 }
 
-a {
+a:not(#adminbar a) {
   color: #e39777 !important;
 }
 
